fixed jumpy animation

--- a/style.css
+++ b/style.css
@@ -823,6 +823,7 @@ footer button {
 .displayNone,
 .displayNoon {
   display: none;
+  transition: none;
 }
 
 .mapBox {
